# vizpath

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: lint.yml  test.yml
dashboard/: .eslintrc.cjs  index.html  package-lock.json  package.json
dashboard/src/: App.tsx
dashboard/src/components/: CostDashboard.tsx  CurationPanel.tsx  DAGView.tsx  ExportMenu.tsx  HeatmapView.tsx  Layout.tsx  SpanTimeline.tsx  TraceComparison.tsx
dashboard/src/hooks/: useWebSocket.ts
dashboard/src/lib/: api.ts  export.ts  types.ts
dashboard/src/pages/: ComparisonPage.tsx  CostPage.tsx  CurationPage.tsx  TraceDetailPage.tsx  TracesPage.tsx
examples/research_agent/: README.md  __init__.py  agent.py  requirements.txt  run.py  test_mock.py  tools.py
sdk/: README.md  pyproject.toml
sdk/tests/: __init__.py  test_config.py  test_span.py  test_tracer.py
sdk/vizpath/: __init__.py  client.py  config.py  decorators.py  exceptions.py  span.py  tracer.py
sdk/vizpath/adapters/: __init__.py  langchain.py  langgraph.py
server/: README.md  pyproject.toml  requirements.txt
server/app/: __init__.py  auth.py  config.py  database.py  main.py  models.py
server/app/routes/: curation.py  projects.py  traces.py  ws.py
server/tests/: __init__.py  conftest.py  test_health.py  test_traces.py
