[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vizpath"
version = "0.1.0"
description = "Lightweight tracing SDK for AI agent observability"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "vizpath contributors" }
]
keywords = ["ai", "agents", "observability", "tracing", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "eval_type_backport>=0.2.0;python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
langgraph = [
    "langgraph>=0.0.1",
]
langchain = [
    "langchain>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/vizpath"
Documentation = "https://github.com/yourusername/vizpath#readme"
Repository = "https://github.com/yourusername/vizpath"
Issues = "https://github.com/yourusername/vizpath/issues"

[tool.hatch.build.targets.wheel]
packages = ["vizpath"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
